@@ -176,6 +176,8 @@ production.
 * (bug 31212) History tab not collapsed when the screen is narrow
 * (bug 15521) Use new section summary when the action of adding a new section
   also happens to create the page
+* (bug 32960) remove EmailAuthenticationTimestamp from database when a
+  email address is removed
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
